--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "54cd3a79",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,6 +357,109 @@
     "    else:\n",
     "        print(type(e).__name__, \":\", str(e))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1a81c1bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.tools import WikipediaQueryRun\n",
+    "from langchain_community.utilities import WikipediaAPIWrapper\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "905bb80f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api_wrapper = WikipediaAPIWrapper(top_k_results=5,doc_content_chars_max=500)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b87b5914",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wiki_tool = WikipediaQueryRun(api_wrapper=api_wrapper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d7e1c116",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\AI-Agent\\env\\Lib\\site-packages\\wikipedia\\wikipedia.py:389: GuessedAtParserWarning: No parser was explicitly specified, so I'm using the best available HTML parser for this system (\"lxml\"). This usually isn't a problem, but if you run this code on another system, or in a different virtual environment, it may use a different parser and behave differently.\n",
+      "\n",
+      "The code that caused this warning is on line 389 of the file d:\\AI-Agent\\env\\Lib\\site-packages\\wikipedia\\wikipedia.py. To get rid of this warning, pass the additional argument 'features=\"lxml\"' to the BeautifulSoup constructor.\n",
+      "\n",
+      "  lis = BeautifulSoup(html).find_all('li')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Page: Tamilaga Vettri Kazhagam\\nSummary: Tamilaga Vettri Kazhagam (transl.\\u2009Victory Party of Tamilakam; abbr. TVK) is an Indian regional political party active in the union territory of Puducherry and the state of Tamil Nadu. It was founded on 2 February 2024 by actor-turned-politician Vijay, who became its first president. The party is headquartered in Panaiyur, Chennai.\\n\\nPage: 2026 Tamil Nadu Legislative Assembly election\\nSummary: Legislative Assembly elections are expected to be held in Tamil N'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wiki_tool.run({\"query\":\"TVK Party\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6dbb69aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cec3e6d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "528d0094",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "780f5519",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0da8a52f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
