updated the internet searching tools from langchain

--- a/test.ipynb
+++ b/test.ipynb
@@ -423,32 +423,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6dbb69aa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os \n",
+    "from langchain_community.tools.tavily_search import TavilySearchResults\n",
+    "TAVILY_API_KEY = os.getenv(\"TAVILY_API_KEY\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5cec3e6d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'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'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TAVILY_API_KEY"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "528d0094",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sanja\\AppData\\Local\\Temp\\ipykernel_8504\\3038890536.py:1: LangChainDeprecationWarning: The class `TavilySearchResults` was deprecated in LangChain 0.3.25 and will be removed in 1.0. An updated version of the class exists in the `langchain-tavily package and should be used instead. To use it run `pip install -U `langchain-tavily` and import as `from `langchain_tavily import TavilySearch``.\n",
+      "  tool =TavilySearchResults(tavily_api_key=TAVILY_API_KEY)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tool =TavilySearchResults(tavily_api_key=TAVILY_API_KEY)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "780f5519",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'TVK will win 175–180 seats in the 2026 Tamil Nadu Assembly ...',\n",
+       "  'url': 'https://www.facebook.com/memeschennai/posts/-tvk-will-win-175180-seats-in-the-2026-tamil-nadu-assembly-elections-bussy-anand/1237766471807423/',\n",
+       "  'content': \"Uttam Mehta\\n\\nSeats from which tent house ?\\n\\n 4h\\n\\n4\\n\\nView all 2 replies\\n\\nRashha Born To Win\\n\\nIn every 234 seat will have Big Vote Split. More simple majority winning votes will happen. From this analysis ADMK + Alliance have potential to first simple majority winner 118/234. DMK will loss more vote counts split to TVK /ADMK / NTK.\\n\\n 5h\\n\\nMohamed Safiullah\\n\\nSorry, may be more, hopefully 264 seats, what do u think dude?\\n\\n 6h\\n\\n2\\n\\nView 1 reply\\n\\nMogan S Iyer\\n\\nTo which party are you DONATING the balance seats?\\n\\n 40m\\n\\nJerry Ng\\n\\nVaalthukkal brother... Oppsss it's late already... Good morning\\n\\nRajkumar Arjunan\\n\\nTVK will Win the Nobel Prize\\n\\n 5h\\n\\nManickam Mudaliar\\n\\nIt’s not bus/ train seat to book .. have win a Election Seat.. not easy bro\\n\\nMay be 2031 election\\n\\n 5h [...] ## Chennai Memes's Post\\n\\n### Chennai Memes\\n\\n12h  ·\\n\\n“TVK will win 175–180 seats in the 2026 Tamil Nadu Assembly Elections!”\\n\\n– Bussy Anand exudes full confidence as the road to 2026 begins!\\n\\nMass belief. Massive target. Mission majority.\\n\\n#TVK #TamilNaduElections2026 #ThalapathyVijay #BussyAnand #TNPolitics #ElectionMode #Mission2026 #TamilNadu #PoliticalUpdate #BreakingNews\\n\\nAll reactions:\\n\\n1.2K\\n\\n280 comments\\n\\n11 shares\\n\\nLike\\n\\nComment\\n\\nMost relevant\\n\\n\\ufeff\\n\\nKathiravan Chelian\\n\\nAfter winning the elections when Vijay was about to take oath suddenly Bussy woke up from his sleep...\\n\\n 6h\\n\\n20\\n\\nAsir Chirstopher\\n\\nIs he bussy or fussy Anand\\n\\n 12h\\n\\n18\\n\\nView all 3 replies\\n\\nMohan Ganapathy\\n\\nSeats are not at the movie theaters..\\n\\n 7h\\n\\n8\\n\\nView 1 reply\\n\\nUttam Mehta\\n\\nSeats from which tent house ?\\n\\n 4h\\n\\n4\",\n",
+       "  'score': 0.93674946},\n",
+       " {'title': \"The '40' factor favouring Vijay's TVK in poll-bound Tamil Nadu\",\n",
+       "  'url': 'https://thesouthfirst.com/tamilnadu/the-40-factor-favouring-vijays-tvk-in-poll-bound-tamil-nadu/',\n",
+       "  'content': '“Currently, it’s a game of guesses and averages. The outcome of the election depends on how many votes TVK pulls and from whom,” the AIADMK leader told South First.\\n\\nAccording to their estimates, if TVK polls 15 percent, it would put the DMK and AIADMK neck and neck. If Vijay polls 20 percent, it would put the AIADMK bloc ahead. Any higher, and the DMK could stand to gain. [...] “Currently, it’s a game of guesses and averages. The outcome of the election depends on how many votes TVK pulls and from whom,” the AIADMK leader told South First.\\n\\nAccording to their estimates, if TVK polls 15 percent, it would put the DMK and AIADMK neck and neck. If Vijay polls 20 percent, it would put the AIADMK bloc ahead. Any higher, and the DMK could stand to gain. [...] Perceptions of TVK are nearly split. On one side of the spectrum are “experts”—politicians, journalists, political observers and psephologists—who are convinced Vijay is a non-entity who may pull votes but will not win enough seats to make a difference to the outcome, and that the buzz around him will fizzle out.\\n\\n#### Also Read: In Tamil Nadu’s neglected hill communities, Vijay’s TVK captures youth’s imagination\\n\\nOn the other end of the spectrum are those who believe TVK is a storm that will engulf Tamil Nadu and that legacy parties will not know what hit them.\\n\\nIn short, one section severely underestimates TVK, while the other seems to overestimate his pull. All of this is seemingly based just on the overwhelming euphoria around the party.',\n",
+       "  'score': 0.9241418},\n",
+       " {'title': 'Tamil Nadu Elections Predictions: DMK On Top, TVK ...',\n",
+       "  'url': 'https://www.oneindia.com/chennai/tamil-nadu-elections-predictions-dmk-on-top-tvk-emerges-as-youth-favourite-tughlak-idaya-survey-8004681.html',\n",
+       "  'content': \"The Tughlak Idaya Survey paints a complex and evolving political picture in Tamil Nadu's South Zone. While DMK+ remains ahead overall, the surge of TVK among youth and younger women signals a shifting political mood. AIADMK, once the dominant force in many southern districts, now faces the challenge of reclaiming lost ground amid a three-way competition.\\n\\nIf these trends hold, the upcoming elections could witness one of the most closely watched battles in recent Tamil Nadu political history - with generational change emerging as the defining factor.\\n\\nPublished On February 20, 2026\\n\\nMore From [...] ## Youth Wave Favours TVK\\n\\nThe most striking data point comes from the 18-30 age group. TVK dominates this demographic with a massive 49.8% vote share projection - nearly half of young voters in the South Zone. In contrast, DMK+ manages only 20.2%, AIADMK+ stands at 11.7%, and NTK secures 8.8%.\\n\\nThis indicates that TVK's messaging and outreach are resonating deeply with first-time and young voters. If this trend sustains and translates into actual ballots, it could significantly reshape electoral arithmetic in several constituencies.\\n\\nAlso Read\\n\\nJana Nayagan Release: Toxic First, Vijay's Film Next As KVN Shifts Focus On Yash Film [...] This is particularly significant because DMK has rolled out multiple welfare schemes targeting women beneficiaries in recent years. Despite these measures, the survey suggests that TVK is making inroads among younger female voters. Interestingly, TVK's support weakens only in the 60+ age group, where it reportedly trails in third position.\\n\\nRecommended For You\\n\\nTamil Nadu Elections: Who Gains If Congress Dumps DMK For Vijay’s TVK?\\n\\nAmong male voters, DMK+ maintains a lead with 36.4%, followed by AIADMK+ at 25.2%, and TVK at 23.7%.\",\n",
+       "  'score': 0.8824279},\n",
+       " {'title': \"Tamil Nadu Poll Predictions: Is Vijay's TVK A Threat To ...\",\n",
+       "  'url': 'https://www.oneindia.com/chennai/tamil-nadu-elections-predictions-will-vijays-tvk-make-any-difference-in-2026-elections-7986885.html',\n",
+       "  'content': 'AI-generated summary, reviewed by editors\\n\\nHow Much Difference Will Vijay s TVK Make In 2026 Elections Inside BJP s Internal Assessment\\n\\nThe Initial Impact: A 10-15% Vote Projection\\n\\nThe report suggests that if elections were held today, TVK could command a significant 10% to 15% of the total vote share. This is no small feat for a debutant party. The BJP\\'s internal analysts attribute this potential success to two primary drivers:\\n\\nThe Youth Dividend: Vijay\\'s primary strength lies in his immense popularity among urban youth and first-time voters. These demographics are increasingly looking for a \"third way\" outside the historical dominance of the two major Dravidian poles. [...] The BJP believes that TVK\\'s entry will likely split the anti-incumbency vote, which could inadvertently play into the hands of the established alliances rather than creating a genuine third-front victory. Meanwhile, the DMK has already begun preemptive strikes, intensifying welfare schemes and grassroots activities to ensure their core base remains unshaken by the celebrity\\'s entry.\\n\\nWhile Vijay has successfully captured the imagination of the youth, the BJP\\'s internal intelligence suggests that \"political optics\" and \"electoral math\" are two very different beasts. For TVK, the challenge will be transforming fan-club energy into a sustainable, booth-level political machine.\\n\\nTranslated from original article in Oneindia Tamil. [...] The \"Alternative\" Narrative: There is a palpable segment of the electorate seeking a departure from traditional Dravidian politics. TVK currently occupies this space as a fresh, non-aligned entity.\\n\\nThe \"Waning\" Theory: Why the BJP Expects a Decline  \\nDespite the impressive initial numbers, the BJP report expresses skepticism regarding TVK\\'s long-term \"staying power.\" The report outlines several critical hurdles that could see Vijay\\'s vote bank erode as the election cycle matures:\\n\\n1. Lack of Grassroots Infrastructure',\n",
+       "  'score': 0.83867973},\n",
+       " {'title': 'TVK Vijay calls 2026 polls as war against corruption',\n",
+       "  'url': 'https://www.thenewsminute.com/tamil-nadu/tvks-vijay-calls-2026-assembly-polls-in-tamil-nadu-a-war-against-corruption',\n",
+       "  'content': '“This is not just another election that comes once in five years. This is a once-in-fifty-years election,” he said, claiming that several parties had united against him because of his stand against corruption and bribery.\\n\\n“The real contest is only between the TVK and the DMK. It is a battle between Vijay and Stalin sir. It is a war between the people of Tamil Nadu and corruption,” he said.\\n\\nReferring to former Chief Ministers K Kamaraj, CN Annadurai, and MG Ramachandran, Vijay said Tamil Nadu was a “superstar state” during their tenures, but alleged that the current administration had turned it into a “super stand-up comedy state.”\\n\\nHe also dismissed Stalin’s claim that the election would be a contest between Tamil Nadu and the National Democratic Alliance (NDA) at the Union. [...] He alleged that his party’s meetings were being obstructed and questioned why permission for TVK events was being denied if there was no political enmity.\\n\\nReferring to the ‘whistle’ symbol allotted to his party, Vijay called the 2026 election a “whistle revolution.” He further said, “Our vote is our right. No one can take it away. The remote to switch off this governance is this election, and the button to press is the whistle symbol.”\\n\\nHe also promised that if voted to power, he would personally visit every village in Tamil Nadu. “Once our government is formed, I will come directly to every village and meet you all,” he said.',\n",
+       "  'score': 0.7201715}]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tool.run({\"query\":\"Will Tvk win the next election?\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0da8a52f",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from langchain_community.tools import DuckDuckGoSearchResults\n",
+    "duck_tool = DuckDuckGoSearchResults()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a88aa501",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Impersonate 'safari_15.3' does not exist, using 'random'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"snippet: 12 Feb 2026 · Racing driver. Years active, 1990–present. Organization, Ajith Kumar Racing. Racing licence, FIA Bronze. Works, Filmography. Spouse. Shalini. . ( m. 2000)., title: Ajith Kumar - Wikipedia, link: https://en.wikipedia.org/wiki/Ajith_Kumar, snippet: 19 May 2025 · From Thala to a racing pioneer, Ajith Kumar's journey is nothing short of inspiring. His passion for motorsports truly comes alive as we spend an exclusive ..., title: EXCLUSIVE Weekend with Ajith Kumar Racing | History on Wheels EP33 - YouTube, link: https://www.youtube.com/watch?v=wGhl5RDapI0, snippet: 4 Jun 2025 · For the unaware, Ajith is not only racing but is also the owner of the team Ajith Kumar Racing. Ajith's other teammates who participate with him in races are ..., title: Senna Lives On: Ajith Kumar brings home McLaren Senna in tribute to his racing idol | Tamil Movie News - The Times of India, link: https://timesofindia.indiatimes.com/entertainment/tamil/movies/news/senna-lives-on-ajith-kumar-brings-home-mclaren-senna-in-tribute-to-his-racing-idol/articleshow/121623340.cms, snippet: 28 Apr 2025 · ... Ajith Kumar Racing congratulates our CEO, Mr. Ajith Kumar, on receiving the prestigious Padma Award. We are excited to celebrate this moment with you and ..., title: With immense pride, the entire team at Venus Motorcycle Tours, Aspire World Tours, and ... - Instagram, link: https://www.instagram.com/p/DI_cXCUzv_N/\""
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duck_tool.run({\"query\":\"Who is the Ajith kumar racing owner?\"})"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "780f5519",
+   "id": "2e96f877",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -456,7 +563,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0da8a52f",
+   "id": "9d26383d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dff52248",
    "metadata": {},
    "outputs": [],
    "source": []
